style.css
body{
    font-family: 'Inconsolata', monospace;
    color: white;
    background-color: black;
    padding-left: 2%;
    height: 100%;
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
}

header{
    position: fixed;
    margin-bottom: auto;
    margin-left: 0;
}

.blackBg{
    background-color: black;
}

#disclaimer{
    position: fixed;
    bottom: 2%;
    width: 30%;
    height: 120px;
    float: left;
    overflow: hidden;
}

.invertedText{
    background-color: #FFFFFF;
    color: #000000;
}

#navBar{
    width: 400px;
    position: fixed;
    margin-top: 150px;;
    margin-left: auto;
    float: left;
    height: 35%;
    z-index: 0;
}

#pageName{
    position:fixed;
    top:5%;
    right:0%;
    text-align: right;
    z-index: 150;
}

img{
    max-width:100%;
    max-height:100%;
    display: inline-block;
}

a:link{
    color: white;
}

a:visited{
    color: white;
}

a.indent:hover{
    display:inline-block;
    text-indent: 5px;
}

a:active{
    color:black;
    background-color: white;
}

a.invisibleLink:link{
    text-decoration: none;
}

a.invisibleLink:hover{
        display: inline-block;
    text-indent: 5px;
}

#content{
    float: right;
    margin-right: 25%;
    width: 50%;
    height: auto;
    text-align: center;
    padding-bottom: 50px;
    padding-top: 10px;
    position: relative;
    z-index: 100;
}

@media (max-width: 767px) {
    #content{
        margin-right: 0%;
    }
}

#about{
    float: right;
    width: 50%;
    height: auto;
    overflow: hidden;
    text-align: left;
    margin-top: 20%;
    background: black;
    padding-left: 25px;
    padding-right: 25px;
    margin-right: 15%;
    position: relative;
    z-index: 100;
}

@media (max-width: 767px) {
    #about{
        margin-right: 0%;
    }
}

.gallery{
    display: inline-block;
    width: 300px;
    height: 300px;
    object-fit: cover;
    padding-top: 5px; 
}


.hide{
    display: none;
}

::selection {
  background: white; /* WebKit/Blink Browsers */
    color: black;
}
::-moz-selection {
  background: white; /* Gecko Browsers */
    color: black;
}


/*micro-clearfix by Nicolas Gallagher http://nicolasgallagher.com/micro-clearfix-hack/*/
/*For modern browsers. */

.cf:before,
.cf:after {
    content:"";
    display:table;
}
.cf:after {
    clear:both;
}
/*For IE 6/7 (trigger has layout) */
.cf {
    zoom:1;
}

